@@ -41,7 +41,7 @@
                 <tr bgcolor="#f4f4f4"> 
                   <td nowrap> <div align="right">*{#ed#}:</div></td>
                   <td nowrap>{html_select_date end_year=2010 field_order=DMY prefix=ed 
-                    time=$time}</td>
+                    time=$time} </td>
                 </tr>
                 <tr bgcolor="#eeeeee"> 
                   <td nowrap><div align="right">*{#weekdays#}:</div></td>
